--- a/src/views/store/account.ejs
+++ b/src/views/store/account.ejs
@@ -1,7 +1,6 @@
 <%- include('../partials/header.ejs') %>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <link rel="stylesheet" href="/css/utils/toastify.css">
+    <link rel="stylesheet" href="/css/vendor/toastify.css">
     <link type="text/css" rel="stylesheet" href="/css/store/account.css"/>
 
     <body>
@@ -57,7 +56,7 @@
 
       <script src="/js/store/accounts/userProfile.js" type="module"></script>
       <script src="/js/utils/showPass.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+      <script src="/js/vendor/toastify.js"></script>
       <script src="https://unpkg.com/feather-icons"></script>
 
   <%- include('../partials/footer.ejs') %>
