--- a/src/views/store/cart.ejs
+++ b/src/views/store/cart.ejs
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/store/cart.css">
     <link rel="stylesheet" href="/css/utils/ratingTooltip.css">
     <link rel="stylesheet" href="/css/utils/sweetalert2.css">
+    <link rel="stylesheet" href="/css/vendor/toastify.css">
 </head>
 
 <body>
@@ -58,7 +59,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-title text-center">
-                        <h3 class="title">products que podrían interesarte</h3>
+                        <h3 class="title">productos que podrían interesarte</h3>
                     </div>
                 </div>
                 <div class="related-products-container">
@@ -142,7 +143,10 @@
     <script src="/js/utils/buttonComparison.js"></script>
     <script src="/js/store/cart/cartView.js" type="module"></script>
     <script src="/js/store/cart/cart.js" type="module"></script>
+    <script src="/js/utils/flashToast.js" type="module"></script>
+    <script src="/js/vendor/toastify.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+	<script src="https://unpkg.com/feather-icons"></script>
 
 </body>
 
