--- a/src/views/store/fav.ejs
+++ b/src/views/store/fav.ejs
@@ -8,11 +8,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
-    <link rel="stylesheet" href="/css/utils/toastify.css">
+    <link rel="stylesheet" href="/css/vendor/toastify.css">
     <link rel="stylesheet" href="/css/utils/sweetalert2.css">
     <link rel="stylesheet" href="/css/store/fav.css">
     <link rel="stylesheet" href="/css/utils/ratingTooltip.css">
-
 </head>
 
 <body>
@@ -114,7 +113,7 @@
     <script src="/js/store/fav/favView.js" type="module"></script>
     <script src="/js/store/cart/cart.js" type="module"></script>
     <script src="/js/utils/buttonComparison.js"></script>
+    <script src="/js/vendor/toastify.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 	<script src="https://unpkg.com/feather-icons"></script>
 </html>
