--- a/src/views/store/orders/orderDetails.ejs
+++ b/src/views/store/orders/orderDetails.ejs
@@ -1,7 +1,10 @@
 <%- include('../../partials/header.ejs') %>
 
 <html>
-<link rel="stylesheet" href="/css/store/orderDetails.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="/css/vendor/toastify.css">
+    <link rel="stylesheet" href="/css/store/orderDetails.css">
+    <link rel="stylesheet" href="/css/utils/toastify.css">
 </html>
 
 </head>
@@ -120,6 +123,9 @@
 </body>
 
 	<script src="/js/utils/PDF.js"></script>
+    <script src="/js/utils/flashToast.js" type="module"></script>
+    <script src="/js/vendor/toastify.js"></script>
+	<script src="https://unpkg.com/feather-icons"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 
 </html>
