--- a/src/views/store/product.ejs
+++ b/src/views/store/product.ejs
@@ -1,7 +1,6 @@
 <%- include('../partials/header.ejs') %>	
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-<link rel="stylesheet" href="/css/utils/toastify.css">
+<link rel="stylesheet" href="/css/vendor/toastify.css">
 <link rel="stylesheet" href="/css/store/spec.css">
 <link rel="stylesheet" href="/css/utils/ratingTooltip.css">
 
@@ -477,7 +476,7 @@
 	<script src="/js/store/stockColor.js"></script>
     <script src="/js/store/cart/cart.js" type="module"></script>
 	<script src="/js/store/rating.js" type="module"></script>
-	<script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+	<script src="/js/vendor/toastify.js"></script>
 	<script src="https://unpkg.com/feather-icons"></script>
 
 	</html>
