--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,10 +1,7 @@
 <%- include ('./partials/header.ejs') %>
 
-  <link rel="stylesheet" href="/css/utils/toastify.css">
-
   <link rel="stylesheet" href="/css/utils/ratingTooltip.css">
-
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+  <link rel="stylesheet" href="/css/vendor/sweetalert2.min.css">
   
 <!-- HTML TAB -->
 <script>
@@ -804,14 +801,12 @@ document.querySelector(".tablink").click();
 </div>
 <!-- /Section -->
 
-
 <%- include('./partials/footer.ejs') %>
         
 </body>
 <script src="/js/utils/ratingTab.js" type="module"></script>
 <script src="/js/utils/ratingTooltip.js" type="module"></script>
 <script src="/js/utils/buttonComparison.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-<script src="https://unpkg.com/feather-icons"></script>
+<script src="/js/vendor/sweetalert2.min.js"></script>
 
 </html>
