--- a/src/views/store/account.ejs
+++ b/src/views/store/account.ejs
@@ -57,6 +57,7 @@
       <script src="/js/store/accounts/userProfile.js" type="module"></script>
       <script src="/js/utils/showPass.js"></script>
       <script src="/js/vendor/toastify.js"></script>
+      <script src="/js/utils/flashToast.js" type="module"></script> 
       <script src="https://unpkg.com/feather-icons"></script>
 
   <%- include('../partials/footer.ejs') %>
