--- a/src/views/store/fav.ejs
+++ b/src/views/store/fav.ejs
@@ -6,9 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
     <link rel="stylesheet" href="/css/vendor/toastify.css">
+    <link rel="stylesheet" href="/css/vendor/sweetalert2.min.css">
     <link rel="stylesheet" href="/css/utils/sweetalert2.css">
     <link rel="stylesheet" href="/css/store/fav.css">
     <link rel="stylesheet" href="/css/utils/ratingTooltip.css">
@@ -114,6 +113,6 @@
     <script src="/js/store/cart/cart.js" type="module"></script>
     <script src="/js/utils/buttonComparison.js"></script>
     <script src="/js/vendor/toastify.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="/js/vendor/sweetalert2.min.js"></script>
 	<script src="https://unpkg.com/feather-icons"></script>
 </html>
