Fuentes en proceso

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -11,7 +11,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Google font -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
+    <link rel="stylesheet" href="/css/fonts/font.css">
 
     <!-- Bootstrap -->
     <link type="text/css" rel="stylesheet" href="/css/libs/bootstrap.min.css"/>
@@ -24,7 +24,7 @@
     <link type="text/css" rel="stylesheet" href="/css/libs/nouislider.min.css"/>
 
     <!-- Font Awesome Icon -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="stylesheet" href="/css/vendor/all.css">
 
     <!-- Custom stlylesheet -->
     <link type="text/css" rel="stylesheet" href="/css/libs/style.css" />
