--- a/public/css/libs/style.css
+++ b/public/css/libs/style.css
@@ -643,11 +643,13 @@ textarea.input {
 }
 
 .header-ctn>div>a {
-  display: block;
   position: relative;
   width: 90px;
   text-align: center;
   color: #FFF;
+  display: flex;
+  flex-direction: column; 
+  align-items: center;   
 }
 
 .header-ctn>div>a>i {
