--- a/src/views/store/orders/order.ejs
+++ b/src/views/store/orders/order.ejs
@@ -1,6 +1,6 @@
 <%- include('../../partials/header.ejs') %>
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+<link rel="stylesheet" href="/js/vendor/toastify.js/src/toastify.min.css">
 <link rel="stylesheet" href="/css/vendor/toastify.css">
 <link rel="stylesheet" href="/css/utils/error.css">
 
