--- a/src/views/store/store.ejs
+++ b/src/views/store/store.ejs
@@ -1,10 +1,11 @@
 <%- include('../partials/header.ejs') %>
 
-  <link rel="stylesheet" href="/css/utils/toastify.css">
+  <link rel="stylesheet" href="/css/vendor/toastify.css"
+<link rel="stylesheet" href="/css/vendor/sweetalert2css">">
 
   <link rel="stylesheet" href="/css/utils/ratingTooltip.css">
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+  <link rel="stylesheet" href="/js/vendor/toastify.js/src/toastify.min.css">
 
 <script>
 	function updateProducts() {
@@ -319,7 +320,7 @@
 	<script src="/js/utils/ratingTooltip.js" type="module"></script>
 	<script src="/js/utils/ratingTab.js" type="module"></script>
 	<script src="/js/utils/buttonComparison.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+	<script src="/js/vendor/toastify.js"></script>
 	<script src="https://unpkg.com/feather-icons"></script>
 
 	</html>
