--- a/src/views/admin/accounts.ejs
+++ b/src/views/admin/accounts.ejs
@@ -1,7 +1,7 @@
 <%- include('../admin/dashboard.ejs') %>
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-<link rel="stylesheet" href="/css/utils/toastify.css">
+<link rel="stylesheet" href="/css/vendor/toastify.css">
+<link rel="stylesheet" href="/css/vendor/sweetalert2.min.css">
 <link rel="stylesheet" href="/css/admin/table.css">
 <link rel="stylesheet" href="/css/utils/state.css">
 <link rel="stylesheet" href="/css/utils/error.css">
@@ -93,7 +93,7 @@
   const currentAdminId = <%= currentAdminId %>;
 </script>
     
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="/js/vendor/sweetalert2.min.js"></script>
 <script type="module" src="/js/admin/accounts/accountsAdmin.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+<script src="/js/vendor/toastify.js"></script>
 <script src="https://unpkg.com/feather-icons"></script>
