--- a/src/views/admin/brandCategory.ejs
+++ b/src/views/admin/brandCategory.ejs
@@ -1,8 +1,8 @@
 <%- include('../admin/dashboard.ejs') %>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="/css/utils/sweetAlertAdmin.css">
-    <link rel="stylesheet" href="/css/utils/toastify.css">
+    <link rel="stylesheet" href="/css/vendor/toastify.css">
+    <link rel="stylesheet" href="/css/vendor/sweetalert2.min.css">
     <link rel="stylesheet" href="/css/admin/table.css">
     <link rel="stylesheet" href="/css/utils/error.css">
     <link rel="stylesheet" href="/css/utils/state.css">
@@ -145,8 +145,8 @@
     </body>
 
     <script type="module" src="/js/admin/brand-category/brandCategory.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="/js/vendor/sweetalert2.min.js"></script>
+    <script src="/js/vendor/toastify.js"></script>
     <script src="https://unpkg.com/feather-icons"></script>
 
     </html>
