--- a/src/views/admin/dashboard.ejs
+++ b/src/views/admin/dashboard.ejs
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="/css/admin/admin.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="stylesheet" href="/css/fonts/font.css">
+    <link rel="stylesheet" href="/css/vendor/all.css">    
     <title>LaVegaTech - Admin</title>
     <link rel="icon" type="image/png" href="/img/lavegatech-logo.png">
 </head>
