--- a/src/views/admin/orders.ejs
+++ b/src/views/admin/orders.ejs
@@ -1,8 +1,7 @@
   <%- include('../admin/dashboard.ejs') %>
 
 <head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <link rel="stylesheet" href="/css/utils/toastify.css">
+    <link rel="stylesheet" href="/css/vendor/toastify.css">
     <link rel="stylesheet" href="/css/admin/orders.css">
 </head>
 
@@ -62,5 +61,5 @@
 </div>
 
 <script type="module" src="/js/admin/orders/orders.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+<script src="/js/vendor/toastify.js"></script>
 <script src="https://unpkg.com/feather-icons"></script>
