--- a/src/views/admin/shipping.ejs
+++ b/src/views/admin/shipping.ejs
@@ -1,7 +1,7 @@
 <%- include('../admin/dashboard.ejs') %>
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-<link rel="stylesheet" href="/css/utils/toastify.css">
+<link rel="stylesheet" href="/css/vendor/toastify.css">
+<link rel="stylesheet" href="/css/vendor/sweetalert2.min.css">
 <link rel="stylesheet" href="/css/utils/sweetAlertAdmin.css">
 <link rel="stylesheet" href="/css/admin/table.css">
 <link rel="stylesheet" href="/css/utils/error.css">
@@ -75,6 +75,6 @@
 
 <script type="module" src="/js/admin/orders/shipping.js"></script>
 <script src="/js/utils/formatPrice.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+<script src="/js/vendor/sweetalert2.min.js"></script>
+<script src="/js/vendor/toastify.js"></script>
 <script src="https://unpkg.com/feather-icons"></script>
