--- a/src/views/store/information/about.ejs
+++ b/src/views/store/information/about.ejs
@@ -111,7 +111,7 @@
 
 <%- include('../../partials/footer.ejs') %>
 
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.all.min.js"></script>
+<script src="/js/vendor/sweetalert2.js"/dist/sweetalert2.all.min.js"></script>
 
 </body>
 
