--- a/src/views/store/information/contact.ejs
+++ b/src/views/store/information/contact.ejs
@@ -1,9 +1,10 @@
 <%- include('../../partials/header.ejs') %>
 
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+<link rel="stylesheet" href="/js/vendor/toastify.js/src/toastify.min.css">
 <link type="text/css" rel="stylesheet" href="/css/store/contact.css"/>
-<link rel="stylesheet" href="/css/utils/toastify.css">
+<link rel="stylesheet" href="/css/vendor/toastify.css"
+<link rel="stylesheet" href="/css/vendor/sweetalert2css">">
 
 <body class="body-contact">
 <div class="contactos-page">
@@ -129,7 +130,7 @@
 
 </body>
 
-<script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+<script src="/js/vendor/toastify.js"></script>
 <script src="https://unpkg.com/feather-icons"></script>
 
 </html>
