--- a/src/views/store/login/verify.ejs
+++ b/src/views/store/login/verify.ejs
@@ -1,7 +1,8 @@
 <%- include('../../components/header.ejs') %>
 
-<link rel="stylesheet" href="/css/utils/toastify.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+<link rel="stylesheet" href="/css/vendor/toastify.css"
+<link rel="stylesheet" href="/css/vendor/sweetalert2css">">
+<link rel="stylesheet" href="/js/vendor/toastify.js/src/toastify.min.css">
 
 <body>
   <div class="code-container">
@@ -44,7 +45,7 @@
 </body>
 
 <script src='/js/store/accounts/resendCode.js' type="module"></script>
-<script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+<script src="/js/vendor/toastify.js"></script>
 <script src="https://unpkg.com/feather-icons"></script>
 
 <%- include('../../components/footer.ejs') %>
