--- a/src/views/store/orders/orderDetails.ejs
+++ b/src/views/store/orders/orderDetails.ejs
@@ -4,7 +4,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/css/vendor/toastify.css">
     <link rel="stylesheet" href="/css/store/orderDetails.css">
-    <link rel="stylesheet" href="/css/utils/toastify.css">
+    <link rel="stylesheet" href="/css/vendor/toastify.css"
+<link rel="stylesheet" href="/css/vendor/sweetalert2css">">
 </html>
 
 </head>
