--- a/src/views/admin/allProducts.ejs
+++ b/src/views/admin/allProducts.ejs
@@ -1,6 +1,6 @@
 <%- include('../admin/dashboard.ejs') %>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css">
+    <link rel="stylesheet" href="/css/vendor/choices.min.css">
     <link rel="stylesheet" href="/css/admin/table.css">
     <link rel="stylesheet" href="/css/utils/documentStyles.css">
 
@@ -121,7 +121,7 @@
         });
     </script>
 
-    <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
+    <script src="/js/vendor/choices.min.js"></script>
     <script src="/js/admin/reports/topProducts.js"></script>
     <script src="/js/utils/formatPrice.js"></script>
     <script src="/js/utils/PDF.js"></script>
