--- a/src/views/store/login/login.ejs
+++ b/src/views/store/login/login.ejs
@@ -37,7 +37,7 @@
       <p class="general-error"><%= error %></p>
     <% } %>
   
-    <button type="submit">Entrar</button>
+    <button type="submit">Iniciar sesión</button>
   </form>
 
   <div class="links">
