Ultimos ajustes en cart

--- a/src/views/store/cart.ejs
+++ b/src/views/store/cart.ejs
@@ -22,7 +22,7 @@
                 </div>
 
                     <div class="cart-header">
-                        <span class="text-muted" id="cart-items-count">0 items</span>
+                        <span class="text-muted" id="cart-items-count">0 productos</span>
                         <div id="clear-cart-container"></div>
                     </div>
 
@@ -36,8 +36,7 @@
                     <h5>SUBTOTAL:</h5>
                     <ul class="list-unstyled">
                         <li class="d-flex justify-content-between">         
-                            <span class="total-price">Total:</span>
-                            <span class="total-price" id="cart-total">$0.00</span>
+                            <span class="total-price" id="cart-total"></span>
                         </li>
                     </ul>
                         <div class="total-price">
