--- a/src/views/store/product.ejs
+++ b/src/views/store/product.ejs
@@ -95,7 +95,7 @@
 								<option value="<%= i %>"><%= i %></option>
 							<% } %>
 							</select>
-							 <span id="outOfStockLabel" class="badge bg-danger"
+							 <span id="outOfStockLabel" class="badge"
 							 style="display:none;">
 							AGOTADO
 						</div>
