--- a/public/css/store/cart.css
+++ b/public/css/store/cart.css
@@ -1,83 +1,86 @@
 .cart-item {
-    border-bottom: 1px solid #ddd;
-    display: flex;
-    align-items: center;
-    gap: 47px;
-    border: 1px solid #ddd;
-    border-radius: 8px;  
-    padding: 10px;
-    margin-bottom: 15px;
-    background-color: #f9f9f9; 
+  border-bottom: 1px solid #ddd;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  border: 1px solid #ddd;
+  border-radius: 8px;  
+  padding: 10px;
+  margin-bottom: 15px;
+  background-color: #f9f9f9; 
 }
 
 .cart-item:last-child {
-    border-bottom: none;
+  border-bottom: none;
 }
 
 .product-image {
-    width: 100px;        
-    height: 100px;
-    overflow: hidden;  
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  width: 100px;        
+  height: 100px;
+  overflow: hidden;  
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-  
+
 .product-info {
-    flex-grow: 1;
-    margin-bottom: 10px; 
+  flex-grow: 1;
+  margin-bottom: 10px; 
 }
 
 .product-info h5 {
-    margin-bottom: 1px;
-    font-size: 16px;
-    width: 200px;
-    white-space: normal;
-    word-wrap: break-word;
+  margin-bottom: 1px;
+  font-size: 16px;
+  width: 200px;
+  white-space: normal;
+  word-wrap: break-word;
 }
 
 .color-item {
-    min-width: 63px; 
-    max-width: 1px; 
-    min-height: 3px;
-    text-align: center;  
-    align-items: center;
-    justify-content: center;
+  min-width: 63px; 
+  max-width: 1px; 
+  min-height: 3px;
+  text-align: center;  
+  align-items: center;
+  justify-content: center;
 }
 
-.color-item p {
-    margin: 0;
+.color-item {
+  margin: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .product-items .label {
-    font-weight: bold; 
-    color: #070606;
-    font-size: 15px;
-    margin-right: 60px;
+  font-weight: bold; 
+  color: #070606;
+  font-size: 15px;
+  margin-right: 100px;
 }
 
 .color-item select:disabled {
-    background-color: #f5f5f5;
-    cursor: not-allowed;
+  background-color: #f5f5f5;
+  cursor: not-allowed;
 }
 
 .product-old-price{
-    color: #8D99AE;
-    font-weight: normal;
+  color: #8D99AE;
+  font-weight: normal;
 }
 
 .product-price{
-    color: #d10000; 
+  color: #d10000; 
 }
 
 span.sale {
-    background-color: #ffffff;
-    color: #d10000; 
-    padding: 1px 10px;
-    font-size: 12px;
-    text-align: center;
-    display: inline-block;
-    border: 2px solid #eb2a2a; 
+  background-color: #ffffff;
+  color: #d10000; 
+  padding: 1px 10px;
+  font-size: 12px;
+  text-align: center;
+  display: inline-block;
+  border: 2px solid #eb2a2a; 
 }
 
 .qty-cantidad{
