Imagen principal en el catalogo

--- a/src/views/admin/variants.ejs
+++ b/src/views/admin/variants.ejs
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/css/utils/error.css">
   <link rel="stylesheet" href="/css/admin/results.css">
   <link rel="stylesheet" href="/css/utils/state.css">
+  <link rel="stylesheet" href="/css/admin/toggleSwitch.css">
 
   <div class="main-content">
     <header class="header">
@@ -39,6 +40,8 @@
                 <th>Color</th>
                 <th>Cantidad</th>
                 <th>Imagen</th>
+                <th style="width: 110px; text-align:center;">Imagen Principal</th>
+
                 <th>Estado</th>
                 <th style="width: 5%">Acciones</th>
               </tr>
