--- a/src/views/store/store.ejs
+++ b/src/views/store/store.ejs
@@ -174,6 +174,8 @@
 								<option value="2" <%=sortBy===2 ? 'selected' : '' %>>Menor precio</option>
 								<option value="3" <%=sortBy===3 ? 'selected' : '' %>>Mayor precio</option>
 								<option value="4" <%=sortBy===4 ? 'selected' : '' %>>Con descuento</option>
+								<option value="5" <%=sortBy===5 ? 'selected' : '' %>>Mejor valorados</option>
+								<option value="6" <%=sortBy===6 ? 'selected' : '' %>>Los más vendidos</option>
 							</select>
 						</label>
 						<label>
